k8s/00-media-stack-pvc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
