k8s/02.0-media-stack-rollout-jellyfin.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector: { matchLabels: { app: jellyfin } }
  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause: { duration: 10s }
        - setWeight: 100
        - pause: { duration: 10s }
  template:
    metadata: { labels: { app: jellyfin } }
    spec:
      nodeSelector:
        kubernetes.io/hostname: rasppi516
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          ports:
            - { containerPort: 8096, name: http }
          volumeMounts:
            - { name: cfg, mountPath: /config }
            - { name: media, mountPath: /data/media }
      volumes:
        - { name: cfg,  persistentVolumeClaim: { claimName: jellyfin-config-pvc } }
        - { name: media, persistentVolumeClaim: { claimName: media-pvc } }
